# mmkg-pmr

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: wn9_img_dataset.csv
data/features/: wn9_img_rf_clip.pkl  wn9_img_tf_clip.pkl  wn9_img_visual_blip.pkl
vlkge/: __init__.py  dataloader.py  helpers.py  utils.py
vlkge/configs/wikiart_mkg_v1/: complex_clip.yaml  distmult_clip.yaml  rotate_clip.yaml  transe_clip.yaml
vlkge/configs/wikiart_mkg_v2/: complex_clip.yaml  distmult_clip.yaml  rotate_clip.yaml  transe_clip.yaml
vlkge/configs/wn9_img/: complex_clip.yaml  distmult_clip.yaml  rotate_clip.yaml  transe_clip.yaml
vlkge/data/: README.md
vlkge/data/wikiart_mkg_v1/: README.md  wikiart_mkg_v1_triples.csv  wikiart_v1.csv
vlkge/data/wikiart_mkg_v1/features/: wikiart_mkg_v1_rf_bert.pkl  wikiart_mkg_v1_rf_blip.pkl  wikiart_mkg_v1_rf_clip.pkl  wikiart_mkg_v1_tf_bert.pkl  wikiart_mkg_v1_tf_blip.pkl  wikiart_mkg_v1_tf_clip.pkl  wikiart_mkg_v1_vf_blip.pkl  wikiart_mkg_v1_vf_clip.pkl  wikiart_mkg_v1_vf_vit_b_16.pkl
vlkge/data/wikiart_mkg_v2/: README.md  wikiart_mkg_v2_triples.csv  wikiart_v2_artists.csv  wikiart_v2_artworks.csv
vlkge/data/wikiart_mkg_v2/features/: wikiart_mkg_v2_rf_bert.pkl  wikiart_mkg_v2_rf_blip.pkl  wikiart_mkg_v2_rf_clip.pkl  wikiart_mkg_v2_tf_bert.pkl  (+5 more)
vlkge/data/wn9_img/: README.md  wn9_img_triples.csv
vlkge/models/: __init__.py  complex.py  distmult.py  rotate.py  transe.py  vlkge.py
vlkge/scripts/: evaluate_linear_probe.py  evaluate_relatedto.py  evaluate_zero_shot.py  train.py
(+6 files in other folders)
