[build-system]
requires = ["setuptools>=64.0", "wheel"]

[project]
name = "vlkge"
version = "1.0.0"
description = "VL-KGE: Vision-Language Models Meet Knowledge Graph Embeddings"
authors = [{name = "Athanasios Efthymiou"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "torch>=2.0",
    "transformers>=4.48.1",
    "salesforce-lavis",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
]

[project.scripts]
vlkge-train = "vlkge.scripts.train:main"

[tool.setuptools.packages.find]
include = ["vlkge", "vlkge.*"]

[tool.setuptools.package-data]
vlkge = ["configs/**/*.yaml", "data/**/*"]
